# stm32-git-init-tool

./: Cargo.toml  README.md
makefile_parser/: Cargo.toml
makefile_parser/src/: lib.rs  model.rs
src/: config.rs  config.yaml  contexts.rs  generate_gitignore.rs  main.rs  patches.rs  render.rs  stm32cubemx.rs  templates.rs  utils.rs
src/configs/gitignore/: auto_generated.toml  build_artifacts.toml  ide.toml  stm32cubemx.toml  system_files.toml
src/templates/: app.c.hbs  app.c.tmpl  app.h.hbs  app.h.tmpl  clang-format.tmpl  create-project-cmd1.tmpl  create-project-cmd2.tmpl  eide-config.tmpl  eide-workspace.tmpl  gitignore.hbs
