[package]
name = "init_stm32_project"
version = "0.1.0"
edition = "2024"

[dependencies]
tinytemplate = "1.2.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
regex = "1.11.2"
clap = { version = "4.5.47", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3" }
toml = "0.9.7"
include_dir = "0.7.4"
rand = "0.9.2"
anyhow = "1.0.100"
dialoguer = "0.12.0"